[package]
name = "lommix_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros", "tracing", "multipart", "headers"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive", "env"] }
dotenv = "0.15.0"
maud = { version = "0.25.0", features = ["axum", "axum-core", "futures-util"] }
mime_guess = "2.0.4"
pulldown-cmark = { version = "0.9.3", features = ["simd"] }
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = "0.4.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
